# python-in-cpp

./: .gitignore  CMakeLists.txt  README.md  generate.py  main.cpp  requirements.txt
